# ai-travel-companion

./: .cursorignore  .gitignore  README.md  run_app.bat  run_app.sh
backend/: README.md  debug.bat  debug.py  debug.sh  main.py  pyproject.toml  requirements.txt  run_backend.bat  run_backend.sh  tasks.py
backend/ai/: assistant.py  models.py  prompts.py  summary.py  travel_details.py  travel_schemas.py  travel_summary.py
backend/flights/: flight_scraper.py  prompts.py
backend/graphs/: assistant.py  recommendation.py
backend/scrapers/: brightdata_api.py  flight_scraper.py  flight_scraper_v2.py  hotel_scraper.py  hotel_scraper_v2.py  prompts.py
backend/services/: recommnendation.py
backend/tools/: flight_scraper.py  hotel_scraper.py
backend/travel/: prompts.py  travel_details.py  travel_schemas.py
backend/utils/: datetime.py  format.py
frontend/: README.md  bun.lockb  index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AIReponse.vue  Button.vue  Card.vue  ChatBubble.vue  ChatInterface.vue  Container.vue  FlightSearch.vue  Icon.vue  IconTooltip.vue  Loader.vue  NavBar.vue  TaskResponse.vue  TextInput.vue  Tooltip.vue  Welcome.vue
frontend/src/composables/: useChat.ts  usePolling.ts  useTasks.ts  useTravelPlanner.ts  useTravelSearch.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  id.ts
frontend/src/stores/: auth.ts  chat.ts  tasks.ts  travel.ts
frontend/src/types/: index.ts
frontend/src/utils/: common.ts  performance.ts
frontend/src/views/: AssistantView.vue  ChatView.vue  DestinationsView.vue  HomeView.vue  LoadingView.vue  LoginView.vue  NotFound.vue
